15-455 bootcamp, reference & move semantics

--- a/daily_schedule/2025_3_21_3_28.md
+++ b/daily_schedule/2025_3_21_3_28.md
@@ -14,3 +14,7 @@ https://15445.courses.cs.cmu.edu/spring2025/project0/
 https://github.com/cmu-db/15445-bootcamp?tab=readme-ov-file
 
 从这个小仓库开始学起。
+
+| 学习内容          |  开始时间         |  结束时间    | 时长 | 目前进度 |
+|-------------------|------------------|-------------|------|----------|
+| 15445-bootcamp   |  2025/3/21 14:00  |2025/3/21 17:30| 3.5h | 看完了 15-445 Bootcamp 里关于 references && move semantics, 前两个 cpp 文件 |
