finish template_functions and template_class

--- a/daily_schedule/2025_4_3_4_10.md
+++ b/daily_schedule/2025_4_3_4_10.md
@@ -11,3 +11,14 @@ https://github.com/cmu-db/15445-bootcamp?tab=readme-ov-file
 | 学习内容          |  开始时间         |  结束时间    | 时长 | 目前进度 |
 |-------------------|------------------|-------------|------|----------|
 | 15445-bootcamp   |  2025/4/3 14：05  | 2025/4/3 17：55| 3h50min  | 完成 move_constructors.cpp 的学习（移动构造函数和移动赋值运算符）|
+
+# 2025/4/4
+
+昨天的进度是完成了 References and Move Semantics 部分的梳理，下面进入 C++ Templates 部分。
+目标是完成两个 template 相关的教学。
+这一节认为和 rust 里面提到的泛型非常类似，基本上是一致的，理解难度低。
+template_functions 和 template_class 很像，都是成员变量的类型可变。区别不大
+
+| 学习内容          |  开始时间         |  结束时间    | 时长 | 目前进度 |
+|-------------------|------------------|-------------|------|----------|
+| 15445-bootcamp   |  2025/4/4 12：50  | 2025/4/4 15：50| 3h  | 完成 template_functions.cpp 和 template_class.cpp 的学习 |
